# Spawn-py

./: .gitignore  README.md  pyproject.toml  test_SelasClient.py
selas/: __init__.py  bind_to_events.py  client.py
spawn/: __init__.py  client.py
src/: SelasClient.py
tests/: test_client.py  test_subscribe.py
